--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "Placement",
     "Website"
   ],
-  "author": "N Sarojini",
+  "author": "Girish Mane",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
