--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Placement Cell",
   "main": "index.js",
   "scripts": {
-   
     "start": "node index.js",
-      "dev": "nodemon index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,6 +18,7 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "body": "^5.1.0",
+    "colors": "^1.4.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
